--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = ">=5.1.6,<6.0.0"
 pillow = ">=11.1.0,<12.0.0"
 gunicorn = "^21.2.0"
 psycopg2 = "^2.9.6"
+poetry-plugin-export = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
