--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Arhoujdam <sarhoujdam@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
+python = ">=3.14.0"
 django = ">=5.1.6,<6.0.0"
 pillow = ">=11.1.0,<12.0.0"
 gunicorn = "^21.2.0"
